--- a/client/index.html
+++ b/client/index.html
@@ -7,32 +7,7 @@
         <title>Ndubuisi Jr Chukuigwe</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="css/blog.css" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
-            integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
-            crossorigin="anonymous"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="images/apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="images/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="images/favicon-16x16.png"
-        />
-        <link rel="manifest" href="images/site.webmanifest" />
+        <link rel="stylesheet" href="css/app.css" />
     </head>
     <body>
         <div id="root"></div>
